@@ -542,6 +542,11 @@ class tx_em_Tools_Unzip {
 			}
 		}
 
+			// added by TYPO3 secteam to check for invalid paths
+		if (!t3lib_div::validPathStr($p_entry['filename'])) {
+				return $v_result;
+		}
+
 		// Add the path
 		if ($p_path != '') {
 			$p_entry['filename'] = $p_path . "/" . $p_entry['filename'];
